<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditAccountActivity">


    <EditText
        android:id="@+id/edit_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:hint="@string/hint_account_name"
        android:inputType="textAutoComplete"
        android:padding="6dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_account_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_account_login"
        android:inputType="textAutoComplete"
        android:padding="6dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_account_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_account_email"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_account_password"
        android:inputType="textAutoComplete"
        android:padding="6dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_account_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_account_uri"
        android:inputType="textAutoComplete"
        android:padding="6dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:strokeColor="#BFDBF7" />

    <Button
        android:id="@+id/button_generate_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_password" />


</LinearLayout>